diesel_compile_tests/tests/ui/insertable_empty_struct.rs
#[macro_use]
extern crate diesel;

table! {
    users {
        id -> Integer,
    }
}

#[derive(Insertable)]
struct User;

fn main() {}
